--- a/.gitignore
+++ b/.gitignore
@@ -74,5 +74,23 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 
+ ir-shail.iml
+
+
+
 # HTML files
 data/
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+
